<resources>
    <string name="app_name">TimelyTest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="dateerror">Enter a valid date</string>
    <string name="outside_worktime">You can only enter times between 7:00 and 19:30</string>
    <string name="negative_total_time">Your total working time should have a positive value</string>
    <string name="too_many_hours">You are not allowed to work more than 10 hours</string>
    <string name="pause_validation_short">If you work 6 hours you have to do a 30min break</string>
    <string name="pause_validation_long">If you work 6 hours you have to do a 30min break</string>
    <string name="day_already_exists">The day already exists</string>
    <string name="error_finding_wp">Error in finding working profile!</string>


    <string-array name="day_type_array">
        <item name="0">Working day</item>
        <item name="1">Business trip</item>
        <item name="2">Holiday</item>
        <item name="3">Illness</item>
        <item name="4">Day off in lieu</item>
        <item name="5">Further education</item>
        <item name="6">Doctor consultation</item>
        <item name="7">Other day</item>
    </string-array>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_login_failed">Authentication failed</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="_0min">0min</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="week_exceed_total_time">You can not work more than 40 hours per week</string>
    <string name="no_weekly_working_hours">You have to set weekly working hours</string>
    <string name="weekly_hours_distribution">weekly hours distribution:</string>
    <string name="overtime">Overtime</string>
    <string name = "save_day_message">Day saved</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="calendar_icon">calendar icon</string>
    <string name="generate_report">Generate Report</string>
    <string name="no_work_on_weekend">The day information have not been saved. No work on weekend</string>
    <string name="no_working_profile">You need to set a working profile first</string>
    <string name="total_reported_days">Total reported days:</string>
    <string name="total_working_days">Total working days</string>
    <string name="total_days_on_vacation">Total days on vacation:</string>
    <string name="total_doc_appointment">Total doctor appointments:</string>
    <string name="total_illness_days">Total days of illness:</string>
    <string name="total_days_off_in_lieu">Total days off in lieu:</string>
    <string name="total_days_further_education">Total days for further education:</string>
    <string name="total_days_business_trip">Total days for business trip:</string>
    <string name="total_days_others">Total other days:</string>
    <string name="total_overtime_hours">Total overtime:</string>
    <string name="send_per_mail">Send report per mail</string>
    <string name="send">Send</string>
    <string name="prompt_email_2">Email:</string>
    <string name="no_days">You need to create at least one day</string>

    <string name="help_title">Description of the Timely Menu Items</string>
    <string name="capture_time_help_desc">Capture Time allows to record the daily time.</string>
    <string name="work_profile_help_desc">Work Profile allows to enter the working hours as specified in the contract.</string>
    <string name="mont_overview_help_desc">Month Overview lists all the days already logged.</string>
    <string name="create_time_sheet_help_desc">Create Time Sheet allows to create a monthly report in a format of the exel-sheet and save it on the phone or send on email. </string>
    </resources>